--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: common
 title: "About"
 description: keep hungry keep foolish
-header-img: "images/bg/batman/bat2.jpg"
+header-img: "images/bg/bleach/bleach4.jpg"
 hideSidebar: true
 notDetail: true
 ---
@@ -22,31 +22,26 @@ notDetail: true
 
     <p>维护和开发过的项目:</p>
     <ul class="li">
-        <li><a href="https://www.longdai.com/" target="_blank">龙贷</a></li>
-        <li><a href="http://www.labi.com/home" target="_blank">蜡笔同步</a></li>
-        <li><a href="http://dig.chouti.com/" target="_blank">抽屉新热榜</a></li>
+        <li><a>秘蜂app</a></li>
+        <li><a>彩蛋猫</a></li>
+        <li><a>抽屉新热榜</a></li>
     </ul>
 
 
     <p>技能点:</p>
     <ul>
-        <li>javascript基础扎实,能手写原生js</li>
-        <li>ES6神马的有深入了解,Typescript和CoffeeScript都进行过实战运用</li>
-        <li>各种浏览器兼容包括css和js</li>
-        <li>jQuery:第一个框架不会jQuery的话算是前端吗</li>
-        <li>Backbone.js ,AngularJs, Vue.js React.js 各种框架都在项目中有过使用。</li>
-        <li>lodash.js ,underscore.js,Handlebars.js, juice.js etc. 一些必备框架</li>
-        <li>H5页面什么的都能手到擒来,不过产品貌似才会叫适配手机的页面为H5</li>
+        <li>精通HTML、CSS技术 熟悉HTML5的新特性、CSS3技术</li>
         <li>less和sass都是用过,个人比较偏向于sass</li>
-        <li>bootstrap也很常用,还要其他一些UI组件库大同小异</li>
-        <li>nodejs前端标配但是文档很多目前没有看完,只是处于运用阶段,谈不上精通。</li>
-        <li>使用webpack和browserify、gulp相关工具快速搭建项目架构</li>
-        <li>前端测试是弱点最近在项目里补充</li>
-        <li>数据库redis,mongodb,mysql增删改查连表查询没问题,高级操作目前没遇到</li>
-        <li>java掌握过一些基础,开发过一些简单服务,了解spring</li>
-        <li>git 熟练掌握</li>
-        <li>Mac用户,linux略懂略懂,可以简单运维</li>
-        <li>Docker简单配置,简单编写过dockerfile</li>
+        <li>各种浏览器兼容包括css和js</li>
+        <li>精通JavaScript语言、DOM编程、AJAX异步请求</li>
+        <li>熟练使用 JQuery类库</li>
+        <li>熟悉JS框架—Bootstrap实现响应式布局</li>
+        <li>git的一些常用指令熟练运用</li>
+        <li>了解webpack、gulp，能顺利的完成代码合并压缩</li>
+        <li>了解MySQL、redis,mongodb数据库</li>
+        <li>了解nodejs，熟练使用react、vue等框架。</li>
+        <li>熟练使用jsp搭建页面，使用的最多的是书写app内嵌的h5页面</li>
+        <li>有开发开发小程序的相关经验</li>
     </ul>
 
     <!-- <p>看过一些书也表一表(有些不太记得了罗列一部分):</p>
