:sparkles: feat(web):
Signed-off-by: liutongbin <liutongbin@gmail.com>

--- a/about.html
+++ b/about.html
@@ -15,16 +15,13 @@ notDetail: true
     </blockquote>
     <p>本站所有观点仅代表我个人</p>
     <img class="avatar" src="https://cdn.darknights.cn/assets/images/avatar.jpeg">
-    <p>Hello,我是toshiba,一个<b>web前端开发工程师</b>,目前就职于<a target="_blank" href="https://www.longdai.com">龙贷在线投资(北京)有限公司</a>,从事该网站前端的日常维护和开发,该网站是2014年3月成立的互联网金融类企业。</p>
-    <p>我性格比较慢热,平时比较酷酷,但是如果熟悉起来了跟大家各种嗨,喜欢看电影无论漫威还是DC。运动缺乏运动神经,所以微胖,吃苦耐劳踏实肯干,抗压能力很强。
-        <img src="https://cdn.darknights.cn/assets/images/about/fun.jpg"/>
-    </p>
+    <p>Hello,我是binn,一个<b>web前端开发工程师</b>,目前就职于<a target="_blank" href="https://www.caidanmao.com/">彩蛋猫科技有限公司</a>,从事管理系统以及官网的研发与维护</p>
 
     <p>维护和开发过的项目:</p>
     <ul class="li">
         <li><a>秘蜂app</a></li>
-        <li><a>彩蛋猫</a></li>
-        <li><a>抽屉新热榜</a></li>
+        <li><a href="https://www.caidanmao.com/">彩蛋猫</a></li>
+        <li><a href="https://dig.chouti.com/">抽屉新热榜</a></li>
     </ul>
 
 
@@ -38,69 +35,9 @@ notDetail: true
         <li>熟悉JS框架—Bootstrap实现响应式布局</li>
         <li>git的一些常用指令熟练运用</li>
         <li>了解webpack、gulp，能顺利的完成代码合并压缩</li>
-        <li>了解MySQL、redis,mongodb数据库</li>
         <li>了解nodejs，熟练使用react、vue等框架。</li>
-        <li>熟练使用jsp搭建页面，使用的最多的是书写app内嵌的h5页面</li>
-        <li>有开发开发小程序的相关经验</li>
+        <li>有开发小程序的相关经验</li>
     </ul>
-
-    <!-- <p>看过一些书也表一表(有些不太记得了罗列一部分):</p>
-    <ul class="book-list clearfix">
-        <li>
-           <img title="web设计:html5和css3实战" src="https://cdn.darknights.cn/assets/images/about/book/1.jpg">
-        </li>
-        <li>
-            <img title="javascript高级程序设计" src="https://cdn.darknights.cn/assets/images/about/book/2.jpg">
-        </li>
-        <li>
-            <img title="node应用程序构建" src="https://cdn.darknights.cn/assets/images/about/book/3.jpg">
-        </li>
-        <li>
-            <img title="node即学即用" src="https://cdn.darknights.cn/assets/images/about/book/4.jpg">
-        </li>
-        <li>
-            <img title="nodejs实战" src="https://cdn.darknights.cn/assets/images/about/book/5.jpg">
-        </li>
-        <li>
-            <img title="使用angularjs开发下一代应用" src="https://cdn.darknights.cn/assets/images/about/book/6.jpg">
-        </li>
-        <li>
-            <img title="精通angularjs" src="https://cdn.darknights.cn/assets/images/about/book/7.jpg">
-        </li>
-        <li>
-            <img title="高性能网站建设指南" src="https://cdn.darknights.cn/assets/images/about/book/8.jpg">
-        </li>
-        <li>
-            <img title="高性能网站建设进阶指南" src="https://cdn.darknights.cn/assets/images/about/book/9.jpg">
-        </li>
-        <li>
-            <img title="html5实战" src="https://cdn.darknights.cn/assets/images/about/book/10.jpg">
-        </li>
-        <li>
-            <img title="angularjs权威教程" src="https://cdn.darknights.cn/assets/images/about/book/11.jpg">
-        </li>
-        <li>
-            <img title="Backbone.js应用程序开发" src="https://cdn.darknights.cn/assets/images/about/book/12.jpg">
-        </li>
-        <li>
-            <img title="高性能javascript" src="https://cdn.darknights.cn/assets/images/about/book/13.jpg">
-        </li>
-        <li>
-            <img title="编写可维护的javascript" src="https://cdn.darknights.cn/assets/images/about/book/14.jpg">
-        </li>
-        <li>
-            <img title="css彻底设计研究" src="https://cdn.darknights.cn/assets/images/about/book/15.jpg">
-        </li>
-        <li>
-            <img title="spring实战" src="https://cdn.darknights.cn/assets/images/about/book/16.jpg">
-        </li>
-        <li>
-            <img title="了不起的nodejs" src="https://cdn.darknights.cn/assets/images/about/book/17.jpg">
-        </li>
-        <li>
-            <img title="Python基础教程" src="https://cdn.darknights.cn/assets/images/about/book/18.jpg">
-        </li>
-    </ul> -->
 </div>
 
 <style>
