:sparkles: feat(www): 修改了网站的背景图片
Signed-off-by: liutongbin <liutongbin@gmail.com>

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: common
 title: "About"
 description: keep hungry keep foolish
-header-img: "images/bg/bleach/bleach4.jpg"
+header-img: "https://i.loli.net/2020/04/01/wgEhj9MlWeQ1kOv.jpg"
 hideSidebar: true
 notDetail: true
 ---
@@ -14,7 +14,7 @@ notDetail: true
         努力做好一个小程序员,争取做牛的人
     </blockquote>
     <p>本站所有观点仅代表我个人</p>
-    <img class="avatar" src="https://cdn.darknights.cn/assets/images/avatar.jpeg">
+    <img class="avatar" src="https://i.loli.net/2020/04/01/zwWdoMfKbOJHkax.jpg">
     <p>Hello,我是binn,一个<b>web前端开发工程师</b>,目前就职于<a target="_blank" href="https://www.caidanmao.com/">彩蛋猫科技有限公司</a>,从事管理系统以及官网的研发与维护</p>
     <p>维护和开发过的项目:</p>
     <ul class="li">
