--- a/category.html
+++ b/category.html
@@ -2,7 +2,7 @@
 title: category
 layout: common
 description: keep hungry keep foolish
-header-img: "images/bg/batman/bat3.jpg"
+header-img: "https://i.loli.net/2020/04/01/b2CYlVr7RU9jG3Q.jpg"
 hideSidebar: true
 shortBg: true
 notDetail: true
