--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: common
 notDetail: true
+header-img: "https://i.loli.net/2020/04/01/fLMBqjQmHdbGOT9.jpg"
 ---
 
 {% for post in paginator.posts %}
