--- a/news.html
+++ b/news.html
@@ -2,7 +2,7 @@
 layout: common
 title: "NEWS"
 description: 抽屉新闻资讯
-header-img: "images/bg/batman/bat17.jpg"
+header-img: "https://i.loli.net/2020/04/01/EqAFWug2Ply4Ss6.jpg"
 hideSidebar: true
 notDetail: true
 ---
